--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>GeoAR.js demo</title>
     <script src='https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js'></script>
-    <script src='../a.js'></script>
+    <script src='./a.js'></script>
 </head>
 
-<link rel="stylesheet" href="../i.css">
+<link rel="stylesheet" href="./i.css">
 
 <!-- Dynamically add places from Javascript -->
 <script src="./places.js"></script>
